  championship. To use this, create a championship event for the track and layout you wish to import results to. Then,
  click on "Manage Event" on the Championship page and select the session results files to import from.
* Removed unnecessary duplication of entrants on Championship pages.

v1.1.3
------

* Fixes an issue with Championship Practice Events not working after updating the cars in the Championship entry list.

v1.1.2
------

* Adds support for sTracker. Read the new config.yml file for more information on setting up sTracker.
* Adds support for running processes alongside the Assetto Corsa server. Each process is run when the server
  is started, and killed when the server is stopped. See config.yml for more information.
* Improves UDP forwarding to only forward as many bytes as were received.
* Log outputs are now limited to a size of 1MB. When the log output reaches 1MB, it is trimmed to keep the most recent
  messages.
* Championships are now split into active and completed championships. They are ordered by the time they were last
  updated.
* Fixes a bug where tyres configured in a championship event would not carry across to the next championship event or
  load into the edit championship event page.
* Fixed scheduled events for time zones outside of UTC.
* Improved some page layouts on mobile devices

v1.1.1
------

* Fixed a bug that caused some scheduled races to not start correctly.

v1.1.0
------

We recommend re-uploading all of your tracks after doing this update! Some new features will only work with
new track assets!

Please also consult the config.yml in the zip file, there is a new section: "live_map" that you must add to your
config.yml to get live map functionality!

* Added a Live Map. You'll need to re-upload your tracks to see the live map, since it requires new
  track assets.
* Added support for 'Reverse Grid Positions' races within Championship events. If a second race occurs, the championship